[package]
name = "glamour"
version = "0.4.1"
edition = "2021"
description = "Strongly typed linear algebra with glam"
authors = ["Simon Ask Ulsnes <simon@ulsnes.dk>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simonask/glamour"
homepage = "https://docs.rs/glamour/latest/glamour/"
keywords = ["gamedev", "math", "matrix", "vector", "quaternion"]
categories = ["game-development", "mathematics", "graphics", "no-std"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
glam = { version = "0.21.1", default-features = false, features = [
    "bytemuck",
    "approx",
] }
bytemuck = { version = "^1.8", default-features = false }
num-traits = { version = "^0.2", default-features = false }
approx = "^0.5"

[dependencies.serde]
version = "^1.0"
features = ["derive"]
optional = true

[dependencies.mint]
version = "^0.5"
package = "mint"
optional = true

[dependencies.glam_0_20]
version = "0.20.0"
package = "glam"
optional = true

[dependencies.encase]
version = "0.3.0"
features = ["glam"]
optional = true

[features]
default = ["std"]
std = ["glam/std", "num-traits/std"]
scalar-math = ["glam/scalar-math", "glam_0_20?/scalar-math"]
serde = ["dep:serde", "glam/serde"]

# Enable conversions to `mint` types
mint = ["dep:mint", "glam/mint"]

# Enable conversions to `bevy` 0.7.x math types (which uses glam 0.20.0).
bevy_0_7_0 = ["glam_0_20"]

# Required for compiling without `std`.
libm = ["glam/libm", "num-traits/libm", "glam_0_20?/libm"]

[dev-dependencies]
euclid = "^0.22"
derive_more = "^0.99"
bytemuck = { version = "^1.8", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }
# Used for testing serialization
serde_json = "1.0.82"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "^0.3", features = ["html_reports"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"

[[bench]]
name = "mat"
harness = false
