[package]
name = "glamour"
version = "0.12.0"
edition = "2021"
description = "Strongly typed linear algebra with glam"
authors = ["Simon Ask Ulsnes <simon@ulsnes.dk>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simonask/glamour"
homepage = "https://docs.rs/glamour/latest/glamour/"
keywords = ["gamedev", "math", "matrix", "vector", "quaternion"]
categories = ["game-development", "mathematics", "graphics", "no-std"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
glam = { version = "0.28.0", default-features = false, features = [
    "bytemuck",
    "approx",
] }
bytemuck = { version = "^1.8", default-features = false }
num-traits = { version = "^0.2.19", default-features = false }
approx = "^0.5"

[dependencies.serde]
version = "^1.0"
default-features = false
optional = true

[dependencies.mint]
version = "^0.5"
package = "mint"
optional = true

[dependencies.encase]
version = "0.6.0"
optional = true

[features]
default = ["std"]
std = ["glam/std", "num-traits/std"]
scalar-math = ["glam/scalar-math"]
serde = ["dep:serde", "glam/serde"]
core-simd = ["glam/core-simd"]

# Enable conversions to `mint` types
mint = ["dep:mint", "glam/mint"]

# Required for compiling without `std`.
libm = ["glam/libm", "num-traits/libm"]

[dev-dependencies]
euclid = "^0.22"
derive_more = "^0.99"
bytemuck = { version = "^1.8", features = ["derive"] }
serde = { version = "^1.0" }
# Used for testing serialization
serde_json = "1.0.82"
serde_test = { version = "^1.0" }
# Used for testing hashing. Using an old version because of MSRV.
hashbrown = "=0.13.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"

[[bench]]
name = "mat"
harness = false
