[workspace]
members = ["tests/wasmtime-guest"]

[package]
name = "glamour"
version = "0.16.0"
edition = "2021"
description = "Strongly typed linear algebra with glam"
authors = ["Simon Ask Ulsnes <simon@ulsnes.dk>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simonask/glamour"
homepage = "https://docs.rs/glamour/latest/glamour/"
keywords = ["gamedev", "math", "matrix", "vector", "quaternion"]
categories = ["game-development", "mathematics", "graphics", "no-std"]

[badges]
maintenance = { status = "actively-developed" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
    'cfg(target_arch, values("spirv"))',
] }

[dependencies]
glam = { version = "0.30.0", default-features = false, features = [
    "bytemuck",
    "approx",
] }
bytemuck = { version = "^1.8", default-features = false }
num-traits = { version = "^0.2.19", default-features = false }
approx = "^0.5"

[dependencies.serde]
version = "^1.0"
default-features = false
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wasmtime]
version = "29.0"
optional = true
default-features = false
features = ["runtime", "component-model"]
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies.wasmtime]
version = "29.0"
default-features = false
features = ["runtime", "component-model", "cranelift"]

[dependencies.mint]
version = "^0.5"
package = "mint"
optional = true

[dependencies.encase]
version = "0.10.0"
optional = true

[features]
default = ["std"]
std = ["glam/std", "num-traits/std"]
scalar-math = ["glam/scalar-math"]
serde = ["dep:serde", "glam/serde"]
core-simd = ["glam/core-simd"]

# Enable conversions to `mint` types
mint = ["dep:mint", "glam/mint"]

# Required for compiling without `std`.
libm = ["glam/libm", "num-traits/libm"]

[dev-dependencies]
euclid = "^0.22"
bytemuck = { version = "^1.8", features = ["derive"] }
serde = { version = "^1.0" }
# Used for testing serialization
serde_json = "1.0.82"
serde_test = { version = "^1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"

[[bench]]
name = "mat"
harness = false
